2007-10-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolderManager.m ([GCSFolderManager -baseTableNameWithUID:]):
	prefix the table names with "sogo" to avoid problems with
	digits-only identifiers.

2007-10-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolderManager.m ([GCSFolderManager -baseTableNameWithUID:]):
	cast the time interval to an unsigned int.

2007-08-29  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>

	* EOQualifier+GCS.m: rewrote comparison code, now uses UPPER instead of
	  the PostgreSQL specific ILIKE. Fixes OGo bug #1906 (v4.7.49)

2007-07-20  Helge Hess  <helge.hess@opengroupware.org>

	* GCSFolderManager.m: added 'some' rollback after an error (v4.7.48)

2007-07-20  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>

	* GCSFolderManager.m: fixed a bug in last check, DROP TABLE is allowed
	  to fail in the given context (bug #1883) (v4.7.47)

2007-07-11  Helge Hess  <helge.hess@opengroupware.org>

	* GCSFolderManager.m: added some error checking, plenty of open ends
	  pending (eg folder creation not wrapped in a transaction) (v4.7.46)
	
2007-06-29  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>

	* GCSFolderManager.m: fixed folder creation to populate empty path
	  fields with NULLs (OGo bug #1883) (v4.7.45)

2007-04-25  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>

	* GCSFolder.[hm]: added methods to delete ACL records (OGo bug #1866)
	  (v4.7.44)

2007-04-22  Helge Hess  <helge.hess@opengroupware.org>

	* GCSChannelManager.m: improved error log (v4.7.43)

2007-04-17  Helge Hess  <helge.hess@opengroupware.org>

	* fixed a few GNUstep compilation warnings (v4.7.42)

2007-03-21  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>

	* GCSFolder.[hm], GCSFolderManager.[hm]: added ability to create and
	  delete GCS folders programmatically (OGo bug #1850) (v4.7.41)

2007-02-12  Helge Hess  <helge.hess@opengroupware.org>

	* GCSFolder.m: fixed a gnustep-base compilation warning (v4.7.40)

2007-02-09  Helge Hess  <helge.hess@opengroupware.org>
