@@ -1,3 +1,8 @@
+2007-10-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* GCSFolder.m ([GCSFolder -writeContent:toName:baseVersion:]):
+	purge the record if previously marked as deleted.
+
 2007-10-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* GCSFolderManager.m ([GCSFolderManager -baseTableNameWithUID:]):
